--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,15 @@ services:
       - POSTGRES_DB=weerayuth
       - POSTGRES_USER=weerayuth
       - POSTGRES_PASSWORD=weerayuth
+  app:
+    image: prawee/strapi:lastest
+    container_name: my_app_compose
+  posts:
+    - "8080:1337"
+  environment:
+    - DATABASE_CLIENT=postgres
+    - DATABASE_HOST=my_db_compose
+    - DATABASE_PORT=55432
+    - DATABASE_USERNAME=weerayuth
+    - DATABASE_PASSWORD=weerayuth
+    - DATABASE_SSL=false
