--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - "55432:5432"
     environment:
-      - POSTGRES_DB=weerayuth
-      - POSTGRES_USER=weerayuth
-      - POSTGRES_PASSWORD=weerayuth
+      - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_USER=${DATABASE_USERNAME}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
   app:
     image: prawee/strapi:latest
     container_name: my_app_compose
@@ -15,9 +15,9 @@ services:
       - "8090:1337"
     environment:
       - DATABASE_CLIENT=postgres
-      - DATABASE_NAME=weerayuth
       - DATABASE_HOST=db    # สามารถ Link ไปยัง Service db ได้ แทนที่จะใช้ IP
-      - DATABASE_PORT=5432  # สามารถใช้งาน Internal Port ได้ เนื่องจากเป็น Service ทีเชื่อมถึงกันแบบภายใน
-      - DATABASE_USERNAME=weerayuth
-      - DATABASE_PASSWORD=weerayuth
+      - DATABASE_PORT=5432  # สามารถใช้งาน Internal Port ได้ เนื่องจากเป็น Service ทีเชื่อมถึงกันแบบภายใน      
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_SSL=false
