--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       - DATABASE_CLIENT=postgres
       - DATABASE_HOST=db    # สามารถ Link ไปยัง Service db ได้ แทนที่จะใช้ IP
-      - DATABASE_PORT=5432  # สามารถใช้งาน Internal Port ได้ เนื่องจากเป็น Service ทีเชื่อมถึงกันแบบภายใน      
+      - DATABASE_PORT=${DATABASE_PORT}  # สามารถใช้งาน Internal Port ได้ เนื่องจากเป็น Service ทีเชื่อมถึงกันแบบภายใน      
       - DATABASE_NAME=${DATABASE_NAME}
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
