--- a/env.dist
+++ b/env.dist
@@ -1,4 +1,14 @@
+# Application
+APP_PORT=modified
+
+# Database
 DATABASE_NAME=modified
-DATABASE_USER=modified
+DATABASE_USERNAME=modified
 DATABASE_PASSWORD=modified
 DATABASE_PORT=modified
+
+# User data
+USER_EMAIL=modified
+USER_USERNAME=modified
+USER_PASSWORD=modified
+USER_KEY=modified
